# examples

./: .gitignore  README.md  package-lock.json  package.json  pglet.sh
bash/: page-test.sh
bash/controls/: barchart.sh  button.sh  callout.sh  checkbox.sh  choicegroup.sh  datepicker.sh  dialog.sh  dropdown.sh  grid.sh  icon.sh  iframe.sh  image.sh  linechart.sh  link.sh  message.sh  nav.sh  panel.sh  piechart.sh  searchbox.sh  slider.sh  spinbutton.sh  tabs.sh  text.sh  theme_example.sh  toggle.sh  toolbar.sh  vertical_barchart.sh
bash/greeter/: greeter-app.sh  greeter.sh
bash/hello-world/: hello-app.sh  hello.sh
bash/todo/: todo.sh
csharp/: .gitignore  PgletExamples.sln
csharp/Buttons/: Program.cs
csharp/Stack/: Program.cs  Stack.csproj
node/: index.js  package-lock.json  package.json
node/controls/: stackControl.js  stack_control.js
node/greeter/: greeter-app.js  greeter.js
node/hello-world/: hello-app.js  hello.js  hello.ts
node/music-search/: README.md  index.js  mbApi.js  package-lock.json  package.json
node/todo/: README.md  app.js  app.ts  download-pglet-node.ps1  package-lock.json  package.json  tsconfig.json
powershell/: hello-world.ps1
powershell/controls/: buttons.ps1  html.ps1  iframe.ps1  progress.ps1  signin-entire-app.ps1  signin-on-demand.ps1  stack.ps1  textbox.ps1
powershell/greeter/: greeter-app.ps1  greeter.ps1
powershell/hello-world/: hello-app.ps1  hello.ps1
python/: README.md  empty-app.py  hello.py  scratch.py
python/chat/: README.md  chat.py  chat_1.py  chat_2.py  pyproject.toml
python/controls/: split.py  (+31 more)
(+199 files in other folders)
